# Equity_AI

./: .gitignore  .pre-commit-config.yaml  FEATURES.md  INFRASTRUCTURE.md  README.md  current_status.md  docker-compose.yml  requirements.txt  todo  watchlist.md
backend/: .gitignore  bugs  pyproject.toml  requirements.txt  todo
backend/app/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py
backend/app/api/: chat.py  conversations.py  dashboard.py  financial.py  health.py  ingestion.py  news.py  research.py  search.py  transcripts.py  unified_search.py  watchlist.py  ws_stream.py
backend/app/auth/: auth.py  auth_router.py  jwt_handler.py  password_utils.py  schemas.py  smtp_service.py  user_service.py
backend/app/conversational/: intent_detector.py  memory.py  query_router.py  response_generator.py
backend/app/embeddings/: chunker.py  embedder.py  vector_store.py
backend/app/ingestion/: data_cleaner.py  financial_loader.py  news_loader.py  sec_filing_loader.py  transcript_loader.py  vector_ingestion_service.py  warmer.py
backend/app/llm/: gemini.py  prompt_templates.py  report_generator.py  response_parser.py  symbol_resolver.py
backend/app/market_data/: __init__.py  dispatcher.py  key_rotator.py
backend/app/mcp/: base.py  financial_api.py  finnhub_api.py  news_api.py  sec_api.py
backend/app/middleware/: rate_limit.py
backend/app/models/: company.py  conversation.py  financials.py  news.py  otp.py  symbol_cache.py  user.py  watchlist.py
backend/app/rag/: context_builder.py  query_expander.py  rag_pipeline.py  retriever.py
backend/app/research_engine/: financial_analysis.py  growth_analysis.py  report_generator.py  risk_analysis.py  valuation.py  valuation_engine.py
backend/app/schemas/: chat.py  dashboard.py  financial.py  health.py  ingestion.py  market.py  research.py  search.py  user.py  watchlist.py
backend/app/services/: chat_service.py  data_service.py  financial_metrics.py  market_snapshot_service.py  research_service.py  stock_price_service.py  symbol_cache_service.py  watchlist_service.py
backend/app/utils/: market_resolver.py  market_utils.py  normalization.py  validation.py
frontend/: .eslintrc.json  (+9 more)
(+70 files in other folders)
