[project]
name = "backend"
version = "0.8.3"
description = "Default template for PDM package"
authors = [
    {name = "xevansz", email = "minithbmatthew@gmail.com"},
]
dependencies = [
    "black",
    "isort",
    "ruff",
    "flake8",
    "pre-commit",
    "fastapi[standard]>=0.128.7",
    "motor>=3.7.1",
    "chromadb>=1.5.0",
    "python-jose>=3.5.0",
    "google-genai>=1.63.0",
    "yfinance>=1.2.0",
    "lxml>=6.0.2",
    "sentence-transformers>=5.2.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
