[project]
name = "backend"
version = "0.8.3"
description = "Default template for PDM package"
authors = [
    {name = "xevansz", email = "minithbmatthew@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.128.7",
    "motor>=3.7.1",
    "chromadb>=1.5.0",
    "python-jose>=3.5.0",
    "google-genai>=1.63.0",
    "yfinance>=1.2.0",
    "lxml>=6.0.2",
    "sentence-transformers>=5.2.3",
    "slowapi>=0.1.9",
    "aiosmtplib>=3.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "mypy>=1.19.1",
]

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true



